--- a/lang_chain_reference.ipynb
+++ b/lang_chain_reference.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "359697d5",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "11d788b0",
    "metadata": {},
@@ -62,6 +64,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05bb564d",
    "metadata": {},
@@ -88,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f39eb39",
    "metadata": {},
@@ -142,6 +146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a425aaa",
    "metadata": {},
@@ -178,6 +183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66bf9634",
    "metadata": {},
@@ -225,6 +231,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e462b5d",
    "metadata": {},
@@ -233,6 +240,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b27fe982",
    "metadata": {},
@@ -277,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ef89bfa",
    "metadata": {},
@@ -325,6 +334,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2b70f23",
    "metadata": {},
@@ -379,6 +389,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c38fe99f",
    "metadata": {},
@@ -387,6 +398,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b9318ed",
    "metadata": {},
@@ -428,6 +440,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "74988254",
    "metadata": {},
@@ -485,6 +498,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ed40bac2",
    "metadata": {},
@@ -626,6 +640,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8474c91d",
    "metadata": {},
@@ -805,6 +820,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b43cec2",
    "metadata": {},
@@ -813,6 +829,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d3f904e9",
    "metadata": {},
@@ -882,6 +899,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e9601db",
    "metadata": {},
@@ -984,6 +1002,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f85defb",
    "metadata": {},
@@ -1097,6 +1116,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "24193139",
    "metadata": {},
@@ -1188,6 +1208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ac358c5",
    "metadata": {},
@@ -1196,6 +1217,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9b9b79b",
    "metadata": {},
@@ -1211,6 +1233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f43b49da",
    "metadata": {},
@@ -1306,6 +1329,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f29fc79c",
    "metadata": {},
@@ -1323,6 +1347,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c34ba415",
    "metadata": {},
@@ -1428,6 +1453,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6191bf5",
    "metadata": {},
@@ -1549,6 +1575,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "84f6193c",
    "metadata": {},
@@ -1565,6 +1592,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3ce05d51",
    "metadata": {},
@@ -1577,6 +1605,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f696b65c",
    "metadata": {},
@@ -1589,6 +1618,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a11f8231",
    "metadata": {},
@@ -1714,6 +1744,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f9c30d2",
    "metadata": {},
@@ -1722,6 +1753,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "14f4b368",
    "metadata": {},
