--- a/playground.ipynb
+++ b/playground.ipynb
@@ -6,19 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# testing LangChain implementation\n",
     "import subprocess\n",
-    "from os import platform\n",
+    "from sys import platform\n",
+    "import os \n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.agents import Tool\n",
     "from langchain.agents import AgentType\n",
-    "import os\n",
-    "from HyperParams.Context import Context\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "from HyperParams.Context import Context\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.memory import ConversationBufferMemory\n",
-    "from langchain.agents import initialize_agent\n"
+    "from langchain.agents import initialize_agent"
    ]
   },
   {
@@ -29,8 +26,17 @@
    "source": [
     "# Load env variables\n",
     "load_dotenv(find_dotenv())\n",
-    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "context = Context(\"HyperParams/history.json\")"
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve system message\n",
+    "system_message = open(\"HyperParams/system_message.txt\", \"r\").read()"
    ]
   },
   {
@@ -39,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Init ChatModel & memory\n",
+    "# Init ChatModel\n",
     "term_gpt = ChatOpenAI(model=\"gpt-4\", temperature=0.5)\n",
     "memory = ConversationBufferMemory(memory_key=\"chat_history\", return_messages=False) # will return history"
    ]
@@ -50,16 +56,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define tool to run command\n",
+    "# Run command method\n",
     "def run_command(text: str):\n",
     "    try:\n",
     "        command_output = subprocess.check_output(text, shell=True, stderr=subprocess.STDOUT)\n",
     "        return command_output\n",
     "    except subprocess.CalledProcessError as e:\n",
-    "        return f\"Error: {e.output.decode('utf-8')}\"\n",
-    "\n",
-    "\n",
-    "\n",
+    "        return f\"Error: {e.output.decode('utf-8')}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Command executor definition & tool init\n",
     "command_executor = Tool(\n",
     "        name=\"command-executor\",\n",
     "        func=run_command,\n",
@@ -87,10 +99,10 @@
     "\n",
     "'''\n",
     "\n",
-    "template = context.system_message + \"\\n\\nYou are running on {platform}. \\n\\n{chat_history}\\nHuman: {human_input}\\nChatbot:\"\n",
+    "template = system_message + \"\\n\\nYou are running on {platform}. \\n\\nHuman: {human_input}\\nChatbot:\"\n",
     "\n",
     "prompt = PromptTemplate(\n",
-    "    input_variables=[\"platform\", \"chat_history\", \"human_input\"],\n",
+    "    input_variables=[\"human_input\", \"platform\"],\n",
     "    template=template\n",
     ")"
    ]
@@ -101,7 +113,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# agent init\n",
     "term_gpt_agent = initialize_agent(\n",
     "    agent=AgentType.CONVERSATIONAL_REACT_DESCRIPTION,\n",
     "    tools=tools,\n",
@@ -132,10 +143,10 @@
     }
    ],
    "source": [
-    "# the magic\n",
+    "# magic\n",
     "while True:\n",
     "    query = input(\"You: \")\n",
-    "    print(term_gpt_agent(query)[\"output\"])"
+    "    print(term_gpt_agent(prompt.format(human_input=query, platform=platform))[\"output\"])"
    ]
   }
  ],
